Cryptocards align fix

--- a/public/style.css
+++ b/public/style.css
@@ -62,7 +62,7 @@ body {
   background: var(--v-background-base);
   box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.16);
   border-radius: 6px;
-  padding: 0;
+  padding: 0px;
   transition: 0.5s;
   display: flex;
   align-content: center;
